create-ghost-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: ghost-app # Label for the Deployment
  name: ghost-app # Name of Deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      run: ghost-app
  template: # Pod template
    metadata:
      labels:
        run: ghost-app # Labels Pods from this Deployment
    spec:
      containers:
        - name: ghost
          image: ghost:5.14.1
          ports:
            - containerPort: 2368
              protocol: TCP
          env: # The variables below could be set on a ConfigMap object
          #  - name: database__client
          #   value: sqlite3
          # - name: database__connection__filename
          #   value: /var/lib/ghost/content/data/ghost.db
           # - name: url
            #  value: http://localhost:2368
             - name: database__connection__host
               value: mysql-service
             - name: database__connection__user
               value: ghost
             - name: database__connection__password
               value: "ghost"
             - name: database__connection__database
               value: "ghost"
          #   - name: url #this is wrong
          #     value: "http://localhost:8080"
---
apiVersion: v1
kind: Service
metadata:
  name: ghost-svc # Name of Service
  namespace: default
  annotations:
    cloud.google.com/neg: '{"ingress": true}' # Creates a NEG after an Ingress is created
spec: # Service's specification
  type: ClusterIP
  selector:
    run: ghost-app # Selects Pods labelled run: ghost-app
  ports:
    - name: http
      port: 80 # Service's port
      protocol: TCP
      targetPort: 2368
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost-ing
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "ghost-ip"
spec:
  defaultBackend:
    service:
      name: ghost-svc # Name of the Service targeted by the Ingress
      port:
        number: 80
