create-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost-ingress
spec:
  defaultBackend:
    service:
      name: ghost-entrypoint
      port:
        number: 8080
